# python-web-boilerplate

./: Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
boilerplateapp/: __init__.py
boilerplateapp/api/: health.py
