[tool.poetry]
name = "python-web-boilerplate"
version = "0.2.0"
description = "An opinionated and best-practices boilerplate for a modern FastAPI web backend"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>", "Alisa Dammer <alisa.dammer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.58.0"
uvicorn = "^0.11.5"
starlette_exporter = "^0.4.1"


[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-docstrings = "*"
flake8-print = "*"
flake8-commas = "*"
flake8-bugbear = "*"
flake8-string-format = "*"
pytest = "*"
pytest-cov = "*"
pytest-flask = "*"
pytest-watch = "*"
hypothesis = "*"
ipython = "*"
flask-shell-ipython = "*"
freezegun = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
